--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,5 @@
-import(lattice, tpr, prodlim)
+import(lattice, tpr, geepack, lgtdl, prodlim)
+## importFrom(prodlim, prodlim, Hist)
 export(cpf, cpfpo, summary.cpf, pseudocpf, summary.pseudocpf)
 S3method(print, cpf)
 S3method(summary, cpf)
