--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,13 @@
 Package: Cprob
 Title: Conditional probability function of a competing event
-Version: 1.2.1
+Version: 1.2.2
 Author: Arthur Allignol
-Description: Estimates the conditional probability function of a
-        competing event, and fits, using the temporal process
-        regression or the pseudo-value approach, a proportional-odds
-        model to the conditional probability function
-Maintainer: Arthur Allignol <arthur.allignol@fdm.uni-freiburg.de>
-Depends: prodlim, tpr, lattice, geepack
+Description: Estimates the conditional probability function of a competing event, and fits, using the temporal process regression or the pseudo-value approach, a proportional-odds model to the conditional probability function
+Maintainer: Arthur Allignol <arthur.allignol@uni-ulm.de>
+Depends: prodlim
+Imports: tpr, geepack, lgtdl, lattice
 License: GPL (>= 2)
-Packaged: 2011-05-02 16:17:32 UTC; arthur
+Packaged: 2014-01-08 10:49:14 UTC; arthur
+NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2011-05-02 16:52:11
+Date/Publication: 2014-01-08 12:53:21
